# product-eng-exercise

./: README.md  package-lock.json  package.json
api/src/: endpoint.ts
apy/: README.md  app.py  pyproject.toml  run_cluster.py
apy/clustering/: clusters.py
apy/db/: __init__.py  pseudo_db.py  updated_tagged_clusters.json
apy/llm/: __init__.py  oai.py
apy/prompts/: __init__.py  tag.py
apy/schemas/: __init__.py  feedback.py
apy/utils/: __init__.py  llm_tools.py  tools.py
web/: tailwind.config.js
web/src/: App.tsx  Feedback.tsx  Groups.tsx  hooks.ts  types.ts
web/src/components/: CommandPalette.tsx  DataTable.tsx  FeedbackDataTable.tsx  GroupsDataTable.tsx
