[tool.poetry]
name = "apy"
version = "0.1.0"
description = ""
authors = ["Rohan Varma <rohan@adoptclarity.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
openai = "^1.51.2"
tenacity = "^9.0.0"
fastapi = "^0.115.2"
scikit-learn = "^1.5.2"
uvicorn = "^0.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
